--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="container">
     <header class="strona naglowek odstep">
       <a class="logo logo-margines-lewy" href="index.html">
         <span>Web</span><span class="logo-stopka-gora">Studio</span>
@@ -41,144 +41,137 @@
       >
       <a class="kontakt" href="#" style="padding-left: 50px">+48 111 111 111</a>
     </header>
-    <main class="strona">
+    <main>
       <section class="ogloszenie">
-        <h1>
-          EFEKTYWNE ROZWIĄZANIA <br />
-          DLA WASZEGO BIZNESU
-        </h1>
-        <button class="przycisk-usluga przycisk-aktywny">Zamów usługę</button>
-      </section>
-      <div class="odstep-sekcji">
-        <table>
-          <tr>
-            <td>
-              <p>LOREM IPSUM</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et melesuada
-              </p>
-            </td>
-            <td>
-              <p>LOREM IPSUM</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et melesuada
-              </p>
-            </td>
-            <td>
-              <p>LOREM IPSUM</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et melesuada
-              </p>
-            </td>
-            <td>
-              <p>LOREM IPSUM</p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-                arcu sem. Sed non sodales dui. Interdum et melesuada
-              </p>
-            </td>
-          </tr>
-        </table>
-      </div>
-      <div class="odstep-sekcji-dolny">
-        <h2 class="sekcja-naglowek">Czym się zajmujemy</h2>
-        <table class="tabela-obrazkow">
-          <tr>
-            <td>
-              <img
-                src="./images/pict1.jpg"
-                alt="pict1"
-                width="370"
-                height="294"
-              />
-            </td>
-            <td>
-              <img
-                src="./images/pict2.jpg"
-                alt="pict2"
-                width="370"
-                height="294"
-              />
-            </td>
-            <td>
-              <img
-                src="./images/pict3.jpg"
-                alt="pict3"
-                width="370"
-                height="294"
-              />
-            </td>
-          </tr>
-        </table>
-      </div>
-      <section class="odstep-sekcji" style="background: #f5f4fa">
-        <h2 class="sekcja-naglowek">Nasz Zespół</h2>
-        <div class="wiersz-obrazow">
-          <figure>
-            <img
-              src="./images/product_designer.jpg"
-              alt="Designer"
-              width="270"
-              height="260"
-            />
-            <figcaption class="obraz-zespol-imie">John Doe</figcaption>
-            <figcaption class="obraz-zespol-tytul">Product Designer</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="./images/frontend_developer.jpg"
-              alt="Frontenddeveloper"
-              width="270"
-              height="260"
-            />
-            <figcaption class="obraz-zespol-imie">John Doe</figcaption>
-            <figcaption class="obraz-zespol-tytul">
-              Frontend developer
-            </figcaption>
-          </figure>
-          <figure>
-            <img
-              src="./images/marketing.jpg"
-              alt="Marketing"
-              width="270"
-              height="260"
-            />
-            <figcaption class="obraz-zespol-imie">John Doe</figcaption>
-            <figcaption class="obraz-zespol-tytul">Marketing</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="./images/ui_designer.jpg"
-              alt="UI Designer"
-              width="270"
-              height="260"
-            />
-            <figcaption class="obraz-zespol-imie">John Doe</figcaption>
-            <figcaption class="obraz-zespol-tytul">UI Designer</figcaption>
-          </figure>
+        <div class="strona">
+          <h1>
+            EFEKTYWNE ROZWIĄZANIA <br />
+            DLA WASZEGO BIZNESU
+          </h1>
+          <button class="przycisk-usluga przycisk-aktywny">Zamów usługę</button>
         </div>
       </section>
+      <!-- <div class="strona odstep-sekcji"> -->
+
+        <div class="strona tabela-ipsum odstep-sekcji">
+          <div >
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et melesuada
+            </p>
+          </div>
+          <div >
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et melesuada
+            </p>
+          </div>
+          <div >
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et melesuada
+            </p>
+          </div>
+          <div >
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et melesuada
+            </p>
+          </div>
+          </div>
+        </div>
+      <!-- </div> -->
+
+      <div class="strona odstep-sekcji-dolny">
+        <h2 class="sekcja-naglowek">Czym się zajmujemy</h2>
+        <!-- <table > -->
+        <div class="wiersz-obrazow">
+          <!-- <tr class="tabela-obrazkow"> -->
+          <!-- <td> -->
+          <img src="./images/pict1.jpg" alt="pict1" width="370" height="294" />
+          <!-- </td>
+              <td> -->
+          <img src="./images/pict2.jpg" alt="pict2" width="370" height="294" />
+          <!-- </td>
+              <td> -->
+          <img src="./images/pict3.jpg" alt="pict3" width="370" height="294" />
+          <!-- </td>
+            </tr>
+          </table> -->
+        </div>
+      </div>
+
+      <div style="background: #f5f4fa">
+        <section class="strona odstep-sekcji">
+          <h2 class="sekcja-naglowek">Nasz Zespół</h2>
+          <div class="wiersz-obrazow">
+            <figure>
+              <img
+                src="./images/product_designer.jpg"
+                alt="Designer"
+                width="270"
+                height="260"
+              />
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">
+                Product Designer
+              </figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./images/frontend_developer.jpg"
+                alt="Frontenddeveloper"
+                width="270"
+                height="260"
+              />
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">
+                Frontend developer
+              </figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./images/marketing.jpg"
+                alt="Marketing"
+                width="270"
+                height="260"
+              />
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">Marketing</figcaption>
+            </figure>
+            <figure>
+              <img
+                src="./images/ui_designer.jpg"
+                alt="UI Designer"
+                width="270"
+                height="260"
+              />
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">UI Designer</figcaption>
+            </figure>
+          </div>
+        </section>
+      </div>
     </main>
-    <footer class="strona stopka">
-      <p class="logo">
-        <span>Web</span>
-        <span class="logo-stopka-dol">Studio</span>
-      </p>
-      <address>
-        <p class="kontakt kontakt-adres">m. Warszawa, Al.Jerozolimskie 21</p>
-        <p style="padding-top: 8px">
-          <a class="kontakt kontakt-stopka" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+    <footer>
+      <div class="stopka strona">
+        <p class="logo">
+          <span>Web</span><span class="logo-stopka-dol">Studio</span>
         </p>
-        <p class="kontakt kontakt-stopka" style="padding-top: 8px">
-          +48 111 111 111
-        </p>
-      </address>
+        <address>
+          <p class="kontakt kontakt-adres">m. Warszawa, Al.Jerozolimskie 21</p>
+          <p class="kontakt kontakt-stopka" style="padding-top: 8px">
+            info@devstudio.com
+          </p>
+          <p class="kontakt kontakt-stopka" style="padding-top: 8px">
+            +48 111 111 111
+          </p>
+        </address>
+      </div>
     </footer>
-    <!-- </div> -->
   </body>
 </html>
