--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="container">
     <header class="strona naglowek odstep">
       <a class="logo logo-margines-lewy" href="index.html">
         <span>Web</span><span class="logo-stopka-gora">Studio</span>
@@ -108,18 +108,21 @@
       </div>
       </div>
     </main>
-    <footer class="strona stopka ">
-      <p class="logo">
-        <span>Web</span>
-        <span class="logo-stopka-dol">Studio</span>
-      </p>
-      <address>
-        <p class="kontakt kontakt-adres">m. Warszawa, Al.Jerozolimskie 21</p>
-        <p style="padding-top: 8px">
-          <a class="kontakt kontakt-stopka" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <footer>
+      <div class="stopka strona">
+        <p class="logo">
+          <span>Web</span><span class="logo-stopka-dol">Studio</span>
         </p>
-        <p class="kontakt kontakt-stopka" style="padding-top: 8px"> +48 111 111 111 </p>
-      </address>
+        <address>
+          <p class="kontakt kontakt-adres">m. Warszawa, Al.Jerozolimskie 21</p>
+          <p class="kontakt kontakt-stopka" style="padding-top: 8px">
+            info@devstudio.com
+          </p>
+          <p class="kontakt kontakt-stopka" style="padding-top: 8px">
+            +48 111 111 111
+          </p>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
