--- a/index — kopia.html
+++ b/index — kopia.html
@@ -95,46 +95,50 @@
         <section class="strona odstep-sekcji">
           <h2 class="sekcja-naglowek">Nasz Zespół</h2>
           <div class="wiersz-obrazow">
-            <div>
+            <figure>
               <img
                 src="./images/product_designer.jpg"
                 alt="Designer"
                 width="270"
                 height="260"
               />
-              <p class="obraz-zespol-imie">John Doe</p>
-              <p class="obraz-zespol-tytul">Product Designer</p>
-            </div>
-            <div>
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">
+                Product Designer
+              </figcaption>
+            </figure>
+            <figure>
               <img
                 src="./images/frontend_developer.jpg"
                 alt="Frontenddeveloper"
                 width="270"
                 height="260"
               />
-              <p class="obraz-zespol-imie">John Doe</p>
-              <p class="obraz-zespol-tytul">Frontend developer</p>
-            </div>
-            <div>
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">
+                Frontend developer
+              </figcaption>
+            </figure>
+            <figure>
               <img
                 src="./images/marketing.jpg"
                 alt="Marketing"
                 width="270"
                 height="260"
               />
-              <p class="obraz-zespol-imie">John Doe</p>
-              <p class="obraz-zespol-tytul">Marketing</p>
-            </div>
-            <div>
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">Marketing</figcaption>
+            </figure>
+            <figure>
               <img
                 src="./images/ui_designer.jpg"
                 alt="UI Designer"
                 width="270"
                 height="260"
               />
-              <p class="obraz-zespol-imie">John Doe</p>
-              <p class="obraz-zespol-tytul">UI Designer</p>
-            </div>
+              <figcaption class="obraz-zespol-imie">John Doe</figcaption>
+              <figcaption class="obraz-zespol-tytul">UI Designer</figcaption>
+            </figure>
           </div>
         </section>
       </div>
